<resources>
    <string name="app_name">美女看看</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tab_home">首页</string>
    <string name="tab_dynamic">动态</string>
    <string name="tab_search">搜索</string>
    <string name="tab_person">我的</string>
    <string name="setting">设置</string>
    <string name="nowlogin">立即登录</string>
    <string name="forget_pw">忘记密码？</string>
    <string name="register">注册</string>
    <string name="use_thrid">使用第三方账号登录</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="favourite">收藏</string>
    <string name="share">分享</string>
    <string name="recent">浏览</string>

    <string name="auth_failure">授权失败</string>
    <string name="auth_success">授权成功</string>
    <string name="auth_cancel">取消授权</string>
    <string name="clearcache">清除缓存</string>
    <string name="exit">退出登录</string>
    <string name="collect">收藏</string>
    <string name="download">下载</string>
    <string name="cancel">取消</string>
    <string name="wechat">微信</string>
    <string name="sina">微博</string>
    <string name="qzone">QQ空间</string>
    <string name="qq">QQ</string>
    <string name="wechatmoments">朋友圈</string>
</resources>
