<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/MatchMatch"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>

    <LinearLayout
        style="@style/MatchWrap"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_wechat"
            style="@style/AutoMatch"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/logo_wechat"
            android:gravity="center"
            android:text="@string/wechat"/>

        <TextView
            android:id="@+id/tv_wechatmoments"
            style="@style/AutoMatch"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/logo_wechatmoments"
            android:gravity="center"
            android:text="@string/wechatmoments"/>

        <TextView
            android:id="@+id/tv_qq"
            style="@style/AutoMatch"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/logo_qq"
            android:gravity="center"
            android:text="@string/qq"/>

        <TextView
            android:id="@+id/tv_qzone"
            style="@style/AutoMatch"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/logo_qzone"
            android:gravity="center"
            android:text="@string/qzone"/>

        <TextView
            android:id="@+id/tv_sina"
            style="@style/AutoMatch"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/logo_sinaweibo"
            android:gravity="center"
            android:text="@string/sina"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/split_line"/>

    <Button
        android:id="@+id/bt_share_cancel"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/btn_share_cancel"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>
</LinearLayout>