<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/rl_bg"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/item_toolbar"/>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_line"/>
    <RadioGroup
        android:id="@+id/rg_tab_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tab_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_tab_home"
            style="@style/Bottom_Tab_Style"
            android:checked="true"
            android:drawableTop="@drawable/tab_home_selector"
            android:text="@string/tab_home"/>

        <RadioButton
            android:id="@+id/rb_tab_search"
            style="@style/Bottom_Tab_Style"
            android:drawableTop="@drawable/tab_search_selector"
            android:text="@string/tab_search"/>

        <RadioButton
            android:id="@+id/rb_tab_person"
            style="@style/Bottom_Tab_Style"
            android:drawableTop="@drawable/tab_person_selector"
            android:text="@string/tab_person"/>
    </RadioGroup>
</LinearLayout>