<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <com.botu.img.ui.view.HackyViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <include layout="@layout/item_toolbar"/>

    <RelativeLayout
        android:id="@+id/rl_tv"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/toolbar_bg">

        <TextView
            android:id="@+id/tv_download"
            style="@style/WrapWrap"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/content_download_selector"
            android:text="@string/download"
            android:textColor="@color/txt_content_selector"
            android:textSize="@dimen/sp_14"/>


        <LinearLayout
            android:id="@+id/tv_collect"
            style="@style/WrapWrap"
            android:layout_centerInParent="true"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_favorite"
                style="@style/WrapWrap"
                android:background="@drawable/icon_favorite_normal"
                android:contentDescription="@string/text_day_ago"/>

            <TextView
                style="@style/WrapWrap"
                android:text="@string/favourite"
                android:textColor="@color/txt_content_selector"
                android:textSize="@dimen/sp_14"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_share"
            style="@style/WrapWrap"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/content_share_selector"
            android:text="@string/share"
            android:textColor="@color/txt_content_selector"
            android:textSize="@dimen/sp_14"/>
    </RelativeLayout>


</RelativeLayout>