<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/ll_login_from"
        style="@style/WrapWrap"
        android:gravity="center"
        android:padding="@dimen/material_deisgn_padding_top_16"
        android:visibility="gone">

        <TextView
            style="@style/WrapWrap"
            android:layout_above="@+id/ll_third_login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:text="@string/use_thrid"
            android:textColor="@color/tab_txt_selected"
            android:textSize="@dimen/tv16"/>

        <RelativeLayout
            android:id="@+id/ll_third_login"
            style="@style/MatchWrap"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/material_deisgn_padding_left_8">

            <ImageView
                android:id="@+id/iv_wx"
                style="@style/WrapWrap"
                android:layout_marginLeft="@dimen/material_deisgn_padding_left_8"
                android:background="@drawable/icon_weixin"/>

            <ImageView
                android:id="@+id/iv_qq"
                style="@style/WrapWrap"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_qq"/>

            <ImageView
                android:id="@+id/iv_sina"
                style="@style/WrapWrap"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/material_deisgn_padding_left_8"
                android:background="@drawable/icon_weibo"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_userinfo_content"
        style="@style/MatchWrap"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/icon_user_bg">

            <com.botu.sticklibrary.view.CircleImageView
                android:id="@+id/iv_head"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/tv_name"
                style="@style/WrapWrap"
                android:layout_below="@+id/iv_head"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_sub_name"
                style="@style/WrapWrap"
                android:layout_below="@+id/tv_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            style="@style/MatchMatch">

            <LinearLayout
                android:id="@+id/ll_favourite"
                style="@style/WrapWrap"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_collection_icon_normal"/>

                <TextView
                    style="@style/WrapWrap"
                    android:text="@string/favourite"
                    android:paddingBottom="8dp"
                    android:textColor="@color/tab_txt_selected"
                    android:textSize="@dimen/tv18"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share"
                style="@style/WrapWrap"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/share_icon_normal"/>

                <TextView
                    android:id="@+id/textView2"
                    style="@style/WrapWrap"
                    android:text="@string/share"
                    android:textColor="@color/tab_txt_selected"
                    android:textSize="@dimen/tv18"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_recent"
                style="@style/WrapWrap"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_foot_normal"/>

                <TextView
                    style="@style/WrapWrap"
                    android:text="@string/recent"
                    android:paddingBottom="8dp"
                    android:textColor="@color/tab_txt_selected"
                    android:textSize="@dimen/tv18"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>